# meli-proxy

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pylintrc  README.md  diagrama-infra.drawio  pyproject.toml
config/: config-spec.json  config.yaml  example.config.yaml  rules.yaml
docker/: Dockerfile  compose.yaml
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: NOTES.txt  _helpers.tpl  app-config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/chart/templates/redis/: deployment.yaml
helm/chart/templates/tests/: test-connection.yaml
helm/values/: prod.yaml
src/api_proxy/: config_loader.py  main.py  rate_limiter.py  rules.py  utils.py
